Create header container, logo,and links

--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page Project</title>
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body>
-    <header>
-        <h1>Header Logo</h1>
-        <ul>
-            <li><a>header link 1</a></li>
-            <li><a>header link 2</a></li>
-            <li><a>header link 3</a></li>
-        </ul>
+    <div class="top-quarter">
+        <div class="header">
+            <ul class="logo">
+                <li>Header Logo</li>
+            </ul>
+
+            <ul class="top-links">
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
+            </ul>
         
-    </header>
-    
+        </div> 
+    </div>
 </body>
 </html>
