--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
         
             <ul class="top-links">
-                <li><a>header link one</a></li>
-                <li><a>header link two</a></li>
-                <li><a>header link three</a></li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
 
