--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <p>
                     This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast
                 </p>
+                <button class="sign-up">
+                    <p>Sign up</p>
+                </button>
+
             </div>
 
             <div class="header2-image">
