--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast
                 </p>
                 <button class="sign-up">
-                    <p>Sign up</p>
+                    <a href="#"><p>Sign up</p></a>
                 </button>
 
             </div>
