--- a/index.html
+++ b/index.html
@@ -96,13 +96,10 @@
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
 
-            <div class="button2">
-                <button class="sign-up2">
-                    <a href="#">
-                        <p>Sign Up</p>
-                    </a>
-                </button>
-            </div>
+            
+            <button class="sign-up2">
+                <a href="#"><p>Sign Up</p></a>
+            </button>      
         
 
         </div>
